# cli

./: .gitignore  LICENSE  README.md  call.go  dev.go  dlopen_unix.go  dlopen_windows.go  extism  generate.go  go.mod  go.sum  install.sh  lib.go  main.go  pdk-templates.json  pyproject.toml  repos.json  util.go
.github/: CODEOWNERS
.github/actions/extism-cli/: action.yml
.github/workflows/: ci.yml  purge.yml  release.yml  release_winget.yml
extism/: go.mod  go.sum  main.go  main_test.go
extism-dev/: README.md  add.go  args.go  call.go  dev.go  dev_test.go  exec.go  extraWasm.json  find.go  gitignore.go  go.mod  go.sum  init.go  list.go  main.go  pool.go  remove.go  repo.go  repos.json  search.go  testWasm.json  update.go
extism_cli/: __init__.py
scripts/: Dockerfile  cleanup-update-branches.sh  get-extism.sh  get.sh  release.sh  set-version.sh  update-deps.sh  update-extism-cli.sh  update-go-sdk.sh
