[tool.poetry]
name = "extism_cli"
version = "0.1.0"
description = "CLI to manage Extism installations"
authors = ["zach <zach@dylib.so>"]
license = "MIT"

packages = [
  {include = "extism_cli"}
]

[tool.poetry.dependencies]
python = "^3.7"
extism = "*"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
python-lsp-server = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
extism = 'extism_cli:main'
